src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
@import '~css/new/colorTokens';

:local {
    .navbar {
        background-color: @classic-neutral-grey-1;
        border-bottom: 1px solid @classic-neutral-grey-3;
        height: 52px;
        justify-content: normal;
        padding: 0 16px;
    }

    .link {
        color: @classic-neutral-grey-5;
        font-weight: 500;
        line-height: 20px;
        margin: 0 16px;
        padding: 16px 0;

        &:hover {
            color: @classic-neutral-grey-6;
        }
    }

    .active {
        border-bottom: 2px solid @classic-main-primary;
        color: @classic-neutral-grey-6;
        padding: 16px 0 14px 0;
    }
}

